[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ExplodingSprite/DuplicateObject.gd" type="Script" id=1]

[node name="DuplicateObject" type="Sprite"]
centered = false
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Tween" type="Tween" parent="."]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
